fix mod updater not working with spaces in file path